fix white space, up version

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description:    Bateaux child theme.
 Author:         Entwine Design/Hector Borges
 Author URI:     http://entwinedesign.com/
 Template:       bateaux
-Version:        0.1.0
+Version:        1.0.1
 */
 
 #where .btx-html {
@@ -72,7 +72,6 @@ Version:        0.1.0
 	}
 
 	.btx-section-wrapper {
-		padding-top: 40px !important;
 		height: 100%;
 	}
 
@@ -95,6 +94,16 @@ Version:        0.1.0
 
 	#where .btx-container--fullwidth {
 		padding-bottom: 150px !important;
+	}
+}
+
+@media only screen and (min-width: 1921px) {
+	.btx-section:not(#occasions) > div,
+	.btx-section:not(#occasions) > div > div,
+	.btx-section > div > div > div,
+	.btx-section > div > div > div > div,
+	.btx-section > div > div > div > div > div{
+		height: 100vh !important;
 	}
 }
 
